# Niranjan-ehr-icp

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/SwasthyaAccess_backend/: Cargo.toml  SwasthyaAccess_backend.did
src/SwasthyaAccess_backend/src/: access.rs  api.rs  auth.rs  errors.rs  lib.rs  model.rs  models.rs  storage.rs
src/SwasthyaAccess_frontend/: index.html  package.json
src/SwasthyaAccess_frontend/src/: App.jsx  index.scss
src/SwasthyaAccess_frontend/src/components/CTA/: CTA.jsx
src/SwasthyaAccess_frontend/src/components/Contact/: Contact.css  Contact.jsx
src/SwasthyaAccess_frontend/src/components/Features/: Features.css  Features.jsx
src/SwasthyaAccess_frontend/src/components/Footer/: Footer.jsx
src/SwasthyaAccess_frontend/src/components/Hero/: Hero.jsx
src/SwasthyaAccess_frontend/src/components/HowItWorks/: HowItWorks.css  HowItWorks.jsx
src/SwasthyaAccess_frontend/src/components/Nav/: Nav.jsx
src/SwasthyaAccess_frontend/src/components/Solutions/: Solutions.jsx
src/SwasthyaAccess_frontend/src/components/Testimonials/: Testimonials.css  Testimonials.jsx
src/SwasthyaAccess_frontend/src/pages/Home/: Home.css  Home.jsx
src/SwasthyaAccess_frontend/src/services/: icp_agent.js  ipfs_service.js
tools/export_candid/: Cargo.toml
tools/export_candid/src/: main.rs
