[package]
name = "SwasthyaAccess_backend"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Internet Computer canister for managing patient medical records"
license = "Apache-2.0"


[lib] 
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
candid_derive = "0.6.6"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"  # For better error handling (optional)

# Development dependencies
[dev-dependencies]
assert_matches = "1.5.0"  # For better test assertions


[profile.release]
lto = true
opt-level = 3
codegen-units = 1

